--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a href = "#0" class="header__link">главная</a>
+            <a href = "#0" class="header__link__active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a href="#0" class="header__link">посмотреть лоты</a>
@@ -31,7 +31,7 @@
           alt="Черный логотип проекта"
         />
       </a>
-      <address class="header_address">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
@@ -149,11 +149,9 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer_address">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br />
         <p>наб. Принсенграхт 263- <br />265, Амстердам</p>
       </address>
       <nav class="footer__menu">
