--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -42,20 +42,20 @@
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text"
-            >о<span class="letter-spacing-extended">но</span></span>
+            >О<span class="letter-spacing-extended">НО</span></span>
           <span class="aligned-text aligned-text_center"
-            >те<span class="letter-spacing-extended">бе</span></span>
+            >ТЕ<span class="letter-spacing-extended">БЕ</span></span>
           <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing-extended">н</span>ад<span
+            ><span class="letter-spacing-extended">Н</span>АД<span
               class="no-letter-spacing"
-              >о</span
+              >О</span
             ></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
-          <button class="bet-button">Сделать ставку</button>
+          </p>
+          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
         </div>
       </section>
       <section class="lots">
@@ -111,10 +111,9 @@
             </a>
           </li>
         </ul>
-        <a href="#" class="lots__look-more-link"> посмотреть больше </a>
+        <a href="#0" class="lots__look-more-link"> посмотреть больше </a>
       </section>
       <section class="about">
-        <div class="about__column">
           <div class="about__logo">
             <img
               src="images/logo-white.svg"
@@ -122,18 +121,17 @@
               alt="Белый логотип проекта"
             />
           </div>
-        </div>
-        <div class="about__column">
-          <h2 class="about__title">Об аукционе</h2>
-          <div class="about_text">
-            <p class="about__text_part">
+        <div class="about__context">
+          <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+          <div class="about__text">
+            <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
               один аукцион. Потому что кому нужен дневник девочки-подростка или
-              картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-              странные вещи, созданные любителями?
+              картина, которую может нарисовать даже ребёнок? Кому нужны все 
+              эти странные вещи, созданные любителями?
             </p>
-            <p class="about__text_part">
+            <p>
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и непонятые.
               Когда-то они казались просто неудачными. Но, несмотря на критику,
@@ -146,10 +144,10 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
+      <address class="footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263- <br />265, Амстердам</p>
+        <p>наб. Принсенграхт 263-<br/>265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -177,7 +175,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
+          <a href="#0" class="footer__social-link">
             <img
               src="./images/vk.svg"
               class="footer__social-icon"
@@ -186,7 +184,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
+          <a href="#0" class="footer__social-link">
             <img
               src="./images/pinterest.svg"
               class="footer__social-icon"
